<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.accountantmini.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_addTransactionFragment"
            app:destination="@id/addTransactionFragment" />
        <action
            android:id="@+id/action_startFragment_to_accountListFragment"
            app:destination="@id/accountListFragment" />
    </fragment>
    <fragment
        android:id="@+id/accountListFragment"
        android:name="com.example.accountantmini.AccountListFragment"
        android:label="@string/accounts"
        tools:layout="@layout/fragment_account_list" >
        <action
            android:id="@+id/action_accountListFragment_to_addAccountFragment"
            app:destination="@id/addAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.example.accountantmini.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction" />
    <fragment
        android:id="@+id/addAccountFragment"
        android:name="com.example.accountantmini.AddAccountFragment"
        android:label="@string/add_new_account"
        tools:layout="@layout/fragment_add_account" >
        <action
            android:id="@+id/action_addAccountFragment_to_accountListFragment"
            app:destination="@id/accountListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>