<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/Logo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/accountant"
        android:textColor="@color/blue"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/Logo1"
        app:layout_constraintTop_toBottomOf="@+id/Logo1" />

    <Button
        android:id="@+id/add_transaction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/account_list_btn"
        app:layout_constraintStart_toStartOf="@id/account_list_btn"
        app:layout_constraintTop_toBottomOf="@id/account_list_btn"/>
    <Button
        android:id="@+id/account_list_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accounts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo2"/>

</androidx.constraintlayout.widget.ConstraintLayout>